feat: connected to cloudinary for image storage and created productmodel using schema

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
 MONGODB_URI = "mongodb+srv://mrabiu321:VFAvcpO7fE4dwhxM@cluster0.krsfm.mongodb.net"
+
+CLOUDINARY_API_KEY = "538752339793743"
+
+CLOUDINARY_SECRET_KEY ="QcGdRXafiEdgy5rPIb3RY52iQfI"
+
+CLOUDINARY_NAME = "ddnt1jcls"
