--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "json-schema": "^0.4.0",
     "mongoose": "^8.9.3",
     "razorpay": "^2.9.4",
     "stripe": "^17.4.0"
