feat: setting up admin evn

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,7 @@ CLOUDINARY_SECRET_KEY ="QcGdRXafiEdgy5rPIb3RY52iQfI"
 CLOUDINARY_NAME = "ddnt1jcls"
 
 JWT_SECRET = "darkvayder"
+
+ADMIN_EMAIL = "mrabiu321@gmail.com"
+
+ADMIN_PASSWORD = "muhammad00"
